Grammar changes for Chapter 1 notebooks

--- a/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
+++ b/notebooks/01.03-Construction-of-an-artificial-(but-realistic)-image.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Construction of an artificial (but realistic) image\n",
     "\n",
-    "Before we move on to looking at a real image, let's spend a few minutes getting comfortable with what each of the sources of counts look like in an artificial image. The advantage is that we can control how much of each source of counts goes into the image. Looking at extreme examples can help build an understanding of what's going on in your images."
+    "Before we move on to looking at a real image, let's spend a few minutes getting comfortable with what each of the different sources of counts look like in an artificial image. The advantage is that we can control how much of each count source goes into the image. Looking at extreme examples can help build an understanding of what's going on in your images."
    ]
   },
   {
@@ -211,11 +211,11 @@
    "source": [
     "## Dark current\n",
     "\n",
-    "Dark current depends on the temperature of the sensor. The amount of dark counts in an image also depend on the exposure time. Dark current is typically very small (0.1 electrons/pixel/second or less). Dark counts in this function are calculated by multiplying the input dark current by the input exposure time after converting the dark current unit from electrons to counts using the gain.\n",
+    "Dark current depends on the temperature of the sensor. The amount of dark counts in an image also depends on the exposure time. Dark current is typically very small (0.1 electrons/pixel/second or less). Dark counts in this function are calculated by multiplying the input dark current by the input exposure time after converting the dark current unit from electrons to counts using the gain.\n",
     "\n",
     "A small fraction of pixels are \"hot\": their dark current is much larger than the rest of the pixels. Hot pixels are modeled here by choosing a subset of the pixels to have a dark current 10,000 times larger than the input dark current. This exaggerates the effect to make those pixels more visible.\n",
     "\n",
-    "The location and current of hot pixels is typically stable over long periods of time, which makes it straightforward to remove their effect from science images by subtracting it out.\n",
+    "The location and current of hot pixels is typically stable over long periods of time, which makes it straightforward to remove their effect from science images by subtracting them out.\n",
     "\n",
     "A dark frame (or dark image) is an image taken with the camera shutter closed.\n",
     "\n",
@@ -315,7 +315,7 @@
    "source": [
     "## Sky background\n",
     "\n",
-    "The amount of sky background depends on the atmospheric conditions (humidity, presence of light clouds, fires upwind from the observatory), the light sources in the sky (the Moon) and light sources in the surrounding area (cities). It may be uniform across the frame or it may not be, depending on the conditions.\n",
+    "The amount of sky background depends on the atmospheric conditions (humidity, presence of light clouds, fires upwind from the observatory), the light sources in the sky (the Moon), and light sources in the surrounding area (cities). It may be uniform across the frame or it may not be, depending on the conditions.\n",
     "\n",
     "The function below generates some sky background. Each time you run it you'll get slightly different results (even if you keep the desired amount of sky counts the same) because the counts from a light source follow a Poisson distribution.\n",
     "\n",
@@ -619,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
