--- a/notebooks/01.04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01.04-Nonuniform-sensitivity.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "## A sample flat image\n",
     "\n",
-    "The sample below has the same size as the simulated image in the previous images. "
+    "The sample flat image below has the same size as the simulated image in the previous notebook. "
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cell below we construct the same image from the previous notebook. Recall that there we used a read noise of 5 electrons/pixel, dark current of 0.1 electron/pix/sec, bias level of 1100, and sky background of 20 counts."
+    "In the cell below we construct the last image from the previous notebook. Recall that there we used a read noise of 5 electrons/pixel, dark current of 0.1 electron/pix/sec, bias level of 1100, and sky background of 20 counts."
    ]
   },
   {
@@ -156,13 +156,6 @@
     "final_image2 = bias_only + noise_only + dark_only + flat * (sky_background(image, 100 * sky_counts, gain=gain) + stars_only)\n",
     "show_image(final_image2, cmap='gray')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
