--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "### Filtering and iterating over images\n",
     "\n",
-    "The convenient thing about `ImageFileCollection` is that it provides convenient ways to filter or loop over files via FITS header keyword values. \n",
+    "The convenient thing about `ImageFileCollection` is that it provides easy ways to filter or loop over files via FITS header keyword values. \n",
     "\n",
     "For example, looping over just the flat files is one line of code:"
    ]
@@ -340,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
