Grammar changes for Chapter 1 notebooks

--- a/notebooks/01.09-reading-images.ipynb
+++ b/notebooks/01.09-reading-images.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path/to/my/images/img-0000.fits\n",
+      "path/to/my/images/img-0001.fits\n",
+      "path/to/my/images/img-0002.fits\n",
+      "path/to/my/images/img-0003.fits\n",
+      "path/to/my/images/img-0004.fits\n",
+      "path/to/my/images/img-0005.fits\n",
+      "path/to/my/images/img-0006.fits\n",
+      "path/to/my/images/img-0007.fits\n",
+      "path/to/my/images/img-0008.fits\n",
+      "path/to/my/images/img-0009.fits\n",
+      "path/to/my/images/img-0010.fits\n",
+      "path/to/my/images/img-0011.fits\n",
+      "path/to/my/images/img-0012.fits\n",
+      "path/to/my/images/img-0013.fits\n",
+      "path/to/my/images/img-0014.fits\n",
+      "path/to/my/images/img-0015.fits\n",
+      "path/to/my/images/img-0016.fits\n",
+      "path/to/my/images/img-0017.fits\n",
+      "path/to/my/images/img-0018.fits\n",
+      "path/to/my/images/img-0019.fits\n",
+      "path/to/my/images/img-0020.fits\n",
+      "path/to/my/images/img-0021.fits\n",
+      "path/to/my/images/img-0022.fits\n",
+      "path/to/my/images/img-0023.fits\n",
+      "path/to/my/images/img-0024.fits\n",
+      "path/to/my/images/img-0025.fits\n",
+      "path/to/my/images/img-0026.fits\n",
+      "path/to/my/images/img-0027.fits\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from itertools import cycle\n",
@@ -132,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<astropy.io.fits.hdu.image.PrimaryHDU object at 0x113b78438>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "image_name = 'img-0001.fits'\n",
     "\n",
@@ -153,9 +199,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SIMPLE  =                    T / conforms to FITS standard                      \n",
+       "BITPIX  =                  -64 / array data type                                \n",
+       "NAXIS   =                    2 / number of array dimensions                     \n",
+       "NAXIS1  =                  200                                                  \n",
+       "NAXIS2  =                  300                                                  \n",
+       "IMAGETYP= 'BIAS    '                                                            \n",
+       "EXPOSURE=                  0.0                                                  \n",
+       "BUNIT   = 'adu     '                                                            "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hdu = hdu_list[0]\n",
     "hdu.header"
@@ -163,9 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.08549673, -0.51944369, -0.19500882, ...,  0.44575842,\n",
+       "        -0.55901371, -0.67407093],\n",
+       "       [-0.78417152, -0.59941546,  0.15866424, ...,  0.66711156,\n",
+       "         0.65395783,  1.25800903],\n",
+       "       [-0.38788261, -0.23902987, -0.88812452, ..., -0.07055117,\n",
+       "         0.2527569 ,  0.27438088],\n",
+       "       ...,\n",
+       "       [-0.2291807 ,  0.25323014, -1.77683895, ..., -2.37495143,\n",
+       "        -2.52510875,  0.05067243],\n",
+       "       [ 0.15291576,  1.59890474,  0.68918218, ...,  0.33837788,\n",
+       "         1.7589278 ,  0.02230794],\n",
+       "       [ 0.97816801, -1.72876672,  0.92964915, ..., -0.00334513,\n",
+       "         0.16893902,  0.03168779]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hdu.data"
    ]
@@ -183,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,18 +286,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SIMPLE  =                    T / conforms to FITS standard                      \n",
+       "BITPIX  =                  -64 / array data type                                \n",
+       "NAXIS   =                    2 / number of array dimensions                     \n",
+       "NAXIS1  =                  200                                                  \n",
+       "NAXIS2  =                  300                                                  \n",
+       "IMAGETYP= 'BIAS    '                                                            \n",
+       "EXPOSURE=                  0.0                                                  \n",
+       "BUNIT   = 'adu     '                                                            "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ccd.header"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.08549673, -0.51944369, -0.19500882, ...,  0.44575842,\n",
+       "        -0.55901371, -0.67407093],\n",
+       "       [-0.78417152, -0.59941546,  0.15866424, ...,  0.66711156,\n",
+       "         0.65395783,  1.25800903],\n",
+       "       [-0.38788261, -0.23902987, -0.88812452, ..., -0.07055117,\n",
+       "         0.2527569 ,  0.27438088],\n",
+       "       ...,\n",
+       "       [-0.2291807 ,  0.25323014, -1.77683895, ..., -2.37495143,\n",
+       "        -2.52510875,  0.05067243],\n",
+       "       [ 0.15291576,  1.59890474,  0.68918218, ...,  0.33837788,\n",
+       "         1.7589278 ,  0.02230794],\n",
+       "       [ 0.97816801, -1.72876672,  0.92964915, ..., -0.00334513,\n",
+       "         0.16893902,  0.03168779]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ccd.data"
    ]
@@ -226,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,9 +380,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table masked=True length=28</i>\n",
+       "<table id=\"table47606517600\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>file</th><th>simple</th><th>bitpix</th><th>naxis</th><th>naxis1</th><th>naxis2</th><th>imagetyp</th><th>exposure</th><th>bunit</th><th>filter</th><th>object</th></tr></thead>\n",
+       "<thead><tr><th>str13</th><th>bool</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>str5</th><th>float64</th><th>str3</th><th>object</th><th>object</th></tr></thead>\n",
+       "<tr><td>img-0000.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0001.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0002.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0003.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0004.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>BIAS</td><td>0.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0005.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0006.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>30.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0007.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0008.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>30.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>img-0009.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>DARK</td><td>5.0</td><td>adu</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>img-0018.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
+       "<tr><td>img-0019.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
+       "<tr><td>img-0020.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
+       "<tr><td>img-0021.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
+       "<tr><td>img-0022.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
+       "<tr><td>img-0023.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
+       "<tr><td>img-0024.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
+       "<tr><td>img-0025.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
+       "<tr><td>img-0026.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>m82</td></tr>\n",
+       "<tr><td>img-0027.fits</td><td>True</td><td>-64</td><td>2</td><td>200</td><td>300</td><td>LIGHT</td><td>30.0</td><td>adu</td><td>V</td><td>xx cyg</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table masked=True length=28>\n",
+       "     file     simple bitpix naxis naxis1 ... exposure bunit filter object\n",
+       "    str13      bool  int64  int64 int64  ... float64   str3 object object\n",
+       "------------- ------ ------ ----- ------ ... -------- ----- ------ ------\n",
+       "img-0000.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
+       "img-0001.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
+       "img-0002.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
+       "img-0003.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
+       "img-0004.fits   True    -64     2    200 ...      0.0   adu     --     --\n",
+       "img-0005.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
+       "img-0006.fits   True    -64     2    200 ...     30.0   adu     --     --\n",
+       "img-0007.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
+       "img-0008.fits   True    -64     2    200 ...     30.0   adu     --     --\n",
+       "img-0009.fits   True    -64     2    200 ...      5.0   adu     --     --\n",
+       "          ...    ...    ...   ...    ... ...      ...   ...    ...    ...\n",
+       "img-0018.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
+       "img-0019.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
+       "img-0020.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
+       "img-0021.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
+       "img-0022.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
+       "img-0023.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
+       "img-0024.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
+       "img-0025.fits   True    -64     2    200 ...     30.0   adu      V xx cyg\n",
+       "img-0026.fits   True    -64     2    200 ...     30.0   adu      V    m82\n",
+       "img-0027.fits   True    -64     2    200 ...     30.0   adu      V xx cyg"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "im_collection.summary"
    ]
@@ -265,16 +456,26 @@
    "source": [
     "### Filtering and iterating over images\n",
     "\n",
-    "The convenient thing about `ImageFileCollection` is that it provides convenient ways to filter or loop over files via FITS header keyword values. \n",
+    "The convenient thing about `ImageFileCollection` is that it provides favorable ways to filter or loop over files via FITS header keyword values. \n",
     "\n",
     "For example, looping over just the flat files is one line of code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "6.1\n",
+      "7.3\n"
+     ]
+    }
+   ],
    "source": [
     "for a_flat in im_collection.hdus(imagetyp='FLAT'):\n",
     "    print(a_flat.header['EXPOSURE'])"
@@ -289,9 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In file img-0018.fits the exposure is: 30.0 with standard deviation  0.998298091953976\n",
+      "In file img-0020.fits the exposure is: 30.0 with standard deviation  1.000039669807247\n",
+      "In file img-0022.fits the exposure is: 30.0 with standard deviation  1.0026186712838565\n",
+      "In file img-0024.fits the exposure is: 30.0 with standard deviation  1.0003069837685148\n",
+      "In file img-0026.fits the exposure is: 30.0 with standard deviation  1.0041797351722077\n"
+     ]
+    }
+   ],
    "source": [
     "for a_flat, fname in im_collection.hdus(imagetyp='LIGHT', object='m82', return_fname=True):\n",
     "    print(f'In file {fname} the exposure is:', a_flat.header['EXPOSURE'], 'with standard deviation ', a_flat.data.std())"
@@ -306,9 +519,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n",
+      "adu\n"
+     ]
+    }
+   ],
    "source": [
     "for a_flat, fname in im_collection.ccds(bunit='ADU', return_fname=True):\n",
     "    print(a_flat.unit)"
@@ -316,12 +564,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SIMPLE  =                    T / conforms to FITS standard                      \n",
+       "BITPIX  =                  -64 / array data type                                \n",
+       "NAXIS   =                    2 / number of array dimensions                     \n",
+       "NAXIS1  =                  200                                                  \n",
+       "NAXIS2  =                  300                                                  \n",
+       "IMAGETYP= 'LIGHT   '                                                            \n",
+       "EXPOSURE=                 30.0                                                  \n",
+       "FILTER  = 'V       '                                                            \n",
+       "OBJECT  = 'xx cyg  '                                                            \n",
+       "BUNIT   = 'adu     '                                                            "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a_flat.header"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
