Summary of dark current steps

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -66,6 +66,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "1. A dark frame only measures dark current if the expected dark counts exceed the read noise of the camera by a factor of a few.\n",
+    "2. Take multiple dark frames and combine them to reduce the noise level in the combined image as much as possible.\n",
+    "2. Most pixels in a CCD have very low dark current.\n",
+    "3. A consequence of 1 and 2 is that you should almost never scale your dark frames up to a longer exposure time because you will amplify noise instead of eliminating dark current.\n",
+    "3. Identify hot pixels and mask them out or otherwise deal with them.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
